<resources>
    <string name="app_name">Monopoly Calculator</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="next">Next</string>
    <string name="main_activity">Monopoly Calculator</string>
    <string name="title_activity_standings">Monopoly Calculator</string>
    <string name="ranking_placeholder">-</string>
    <string name="player_name_placeholder">Player</string>
    <string name="total_placeholder">$---</string>
    <string name="edit">Edit</string>
    <string name="cash">Cash:</string>
    <string name="property">Property:</string>
    <string name="save">Save</string>
    <string name="property_name_placeholder">Property</string>
    <string name="hotel_label">Hotel</string>
    <string name="mortgaged_view">Mortgaged</string>
    <string name="houses">Houses</string>
    <string name="zero">0</string>
    <string name="calculate_new_game">Calculate New Game:</string>
    <string name="about_menu">About</string>
    <string name="restart">Restart</string>
    <string name="version">Version</string>
    <string name="copyright">Monopoly and all related trademarks are owned by Hasbro.</string>
    <string name="NBI_software">Developed by NBI Software</string>
    <string name="pro_bool">proVersion</string>
    <string name="pro_pref_key">mc_pro_version</string>
    <string name="rules_menu">Rules</string>
    <string name="go_pro">Go Pro</string>
    <string name="feature_title">Upgrade to Monopoly Calculator Pro to get access to these unique features:</string>
    <string name="feature_list">- No ads\n\n- Save Game\n\n- Enter up to eight players</string>
    <string name="has_pro">Congrats! You have already upgraded to pro. Enjoy the above pro features!</string>
    <string name="save_game">Save Game</string>
    <string name="redeem_description">Purchased PRO on another device? Reinstalled after upgrading to PRO previously?\nClick \'Redeem\' to claim your PRO status.</string>
    <string name="redeem">Redeem</string>
</resources>