<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/save_game_menu_item"
          android:title="@string/save_game"
          android:icon="@drawable/save_menu_icon" />

    <item android:id="@+id/restart_menu_item"
          android:title="@string/restart"
          android:icon="@drawable/reset_button">
    </item>

    <item android:id="@+id/rules_menu_item"
          android:title="@string/rules_menu"
          android:icon="@drawable/rules_icon">
    </item>

    <item android:id="@+id/pro_menu_item"
          android:title="@string/go_pro"
          android:icon="@drawable/add_button">
    </item>

    <item android:id="@+id/about_menu_item"
          android:title="@string/about_menu"
          android:icon="@drawable/info_menu">
    </item>
</menu>