<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.inge.nathan.monopolycalculator.UI.MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal" >

        <EditText
            android:id="@+id/p1_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_1" />

        <EditText
            android:id="@+id/p2_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_2" />

        <EditText
            android:id="@+id/p3_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_3" />

        <EditText
            android:id="@+id/p4_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_4" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>



</LinearLayout>
