<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_end" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/kabel_bold"
            android:textSize="16sp"
            android:text="@string/main_activity"/>

        <TextView
            android:id="@+id/version_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/kabel_bold"
            android:textSize="16sp"
            android:text="@string/version"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/title_view"/>

        <TextView
            android:id="@+id/develop_view"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/version_view"
            android:text="@string/NBI_software"/>

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/develop_view"
            android:text="@string/copyright"/>

    </RelativeLayout>

</LinearLayout>
