<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_end" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/feature_title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kabel_bold"
                android:text="@string/feature_title"/>

            <TextView
                android:id="@+id/feature_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/feature_list"/>

            <Button
                android:id="@+id/buy_pro_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/kabel_bold"
                android:visibility="gone"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/has_pro_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:visibility="gone"
                android:fontFamily="@font/kabel_bold"
                android:text="@string/has_pro"/>

            <TextView
                android:id="@+id/redeem_pro_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:visibility="gone"
                android:fontFamily="@font/kabel_regular"
                android:text="@string/redeem_description"/>

            <Button
                android:id="@+id/redeem_pro_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:fontFamily="@font/kabel_regular"
                android:text="@string/redeem"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
